--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-startup-landing-page",
+  "name": "xyzdotapp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,8 @@
   "dependencies": {
     "@dotlottie/react-player": "^1.6.19",
     "@lottiefiles/dotlottie-react": "^0.7.2",
+    "@react-three/drei": "^9.112.0",
+    "@react-three/fiber": "^8.17.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
@@ -20,8 +22,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icon-cloud": "^4.1.4",
+    "soft-ui": "^0.1.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.168.0",
+    "three-globe": "^2.31.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
